resources/examples/syntax_error/source.c
void main()
{
    printf("\nHello")
    printf(" Universe!");
    return;
}
